Diploma-Project-2023/diploma-project-back-end/k8s/rabbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
